<resources>
    <string name="app_name">Тотализатор 2022</string>
    <string name="settings">Администрирование</string>
    <string name="loading">Идёт загрузка …</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="empty">empty</string>

    <string name="registration">Регистрация</string>
    <string name="auth">Авторизация</string>
    <string name="rating">Рейтинг</string>
    <string name="prognosis">Прогноз</string>
    <string name="stakes">Ставки</string>
    <string name="games">Игры</string>
    <string name="profile">Профиль</string>
    <string name="admin_gambler">Участник</string>
    <string name="add_game">Добавить матч</string>

    <string name="save">Сохранить</string>

    <string name="error_all_required">Все поля должны быть заполнены</string>
    <string name="error_field_empty">Поле \"%1$s\" должно быть заполнено</string>
    <string name="error_min_length">Длина поля \"%1$s\" должна быть не меньше %2$d</string>
    <string name="error_confirm_password">Пароли должны совпадать</string>
    <string name="error_photo_load">Фото должно быть загружено</string>
    <string name="error_stake">Вы ещё не перечислили свою ставку</string>
    <string name="error_gender">Укажите свой пол</string>
    <string name="error_valid_email">Некорректный адрес email</string>
    <string name="error_value_empty">значение <b>\"%1$s\"</b> не заполнено</string>
    <string name="error_add_games">Ошибка при обновлении расписания</string>
    <string name="error_random_stakes">Ошибка при формировании случайных ставок</string>
    <string name="error_add_teams">Ошибка при обновлении списка сборных</string>
    <string name="error_team_selection">Должны быть выбраны разные команды</string>

    <string name="admin_settings_add_games_success">Расписание успешно обновлено</string>
    <string name="admin_settings_add_teams_success">Список сборных успешно обновлён</string>
    <string name="admin_settings_random_stakes_success">Ставки успешно сохранены</string>

    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="password">Пароль</string>
    <string name="password_confirm">Подтвердить пароль</string>
    <string name="email_is_not_allowed">email %1$s отсутствует в списке разрешённых</string>

    <string name="winning">%1$.0fруб.</string>
    <string name="winning_coefficient">(коэф. %1$.2f)</string>

    <string name="nickname">НИК</string>
    <string name="family">Фамилия</string>
    <string name="name">Имя</string>
    <string name="gender">Пол</string>
    <string name="man">м</string>
    <string name="woman">ж</string>
    <string name="load_photo">Загрузить фото</string>
    <string name="email">email</string>
    <string name="stake">ставка: %1$dруб.</string>
    <string name="gambler_points">кол-во очков: %1$.2f</string>

    <string name="stake_empty">ставка</string>
    <string name="active">активен</string>

    <string name="admin">администратор</string>
    <string name="admin_settings_random_stakes">Случайные ставки для группового этапа</string>
    <string name="admin_settings_add_games">Добавить расписание игр</string>
    <string name="admin_settings_add_teams">Добавить список сборных</string>
    <string name="admin_settings_list_email">Список разрешённых e-mail адресов</string>

    <string name="number">№</string>
    <string name="team">Команда</string>
    <string name="first">1</string>
    <string name="second">2</string>
    <string name="third">3</string>
    <string name="fourth">4</string>
    <string name="win">В</string>
    <string name="draw">Н</string>
    <string name="defeat">П</string>
    <string name="balls">М</string>
    <string name="points">О</string>

    <string name="group">Группа %1$s</string>
    <string name="colon">:</string>
    <string name="start_game">%1$s (игра №%2$s)</string>

    <string name="stake_add_time">доп.время %1$s : %2$s</string>
    <string name="stake_penalty">, по пенальти %1$s</string>
    <string name="question_mark">\?</string>
    <string name="games_played">Сыгранные матчи</string>
    <string name="add_time">доп.время</string>
    <string name="penalty">по пенальти</string>

    <string name="start_new_game">Начало матча</string>
    <string name="stage">Стадия</string>
    <string name="teams">Команды</string>
    <string name="game_number">Номер матча</string>
    <string name="add_email">Добавить e-mail</string>
    <string name="data_absent">Данные отсутствуют</string>
    <string name="remove">Удалить</string>

    <string name="tournament_not_started">Турнир ещё не начался</string>
    <string name="coefficients">Коэффициенты</string>
    <string name="gambler">Игрок</string>
    <string name="points_full">Очки</string>
    <string name="coefficient_for_win">за победу %1$.2f</string>
    <string name="coefficient_for_draw">за ничью %1$.2f</string>
    <string name="coefficient_for_defeat">за поражение %1$.2f</string>
    <string name="coefficient_for_fine">штраф %1$.2f</string>

</resources>