<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemPrognosisTable"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:columnCount="3">

    <!--Row-->
    <TextView
        android:layout_width="120dp"
        android:ellipsize="end"
        tools:text="@string/gambler" />

    <TextView
        android:layout_width="220dp"
        android:ellipsize="end"
        android:gravity="center"
        tools:text="@string/prognosis" />

    <TextView
        android:layout_width="48dp"
        android:gravity="center"
        tools:text="@string/points_full" />

</GridLayout>
