<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.start.StartFragment">

    <ImageView
        android:layout_width="@dimen/img_logo_width"
        android:layout_height="@dimen/img_logo_height"
        android:layout_marginBottom="@dimen/margin_xl"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startSignIn"
        style="@style/button_start_fragment"
        android:text="@string/auth"
         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        style="@style/button_start_fragment" />

</LinearLayout>

    <!--
    </FrameLayout>-->
