<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/padding_sm">

    <LinearLayout
        android:id="@+id/itemStakeLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/application"
        android:orientation="horizontal"
        android:padding="@dimen/padding_sm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/itemStakeStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_sm"
            tools:text="@string/start_game" />

        <TextView
            android:id="@+id/itemStakeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_sm"
            tools:text="@string/group" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:padding="@dimen/padding_sm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemStakeLayoutTop">

        <TextView
            android:id="@+id/itemStakeColon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemStakeGoal1"
            android:layout_width="@dimen/stake_width_goal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_sm"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@id/itemStakeColon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/question_mark" />

        <TextView
            android:id="@+id/itemStakeTeam1"
            android:layout_width="@dimen/stake_width_team"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_sm"
            android:ellipsize="end"
            android:gravity="end"
            android:lines="1"
            app:layout_constraintEnd_toStartOf="@id/itemStakeGoal1"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/team" />

        <TextView
            android:id="@+id/itemStakeGoal2"
            android:layout_width="@dimen/stake_width_goal"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_sm"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/itemStakeColon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/question_mark" />

        <TextView
            android:id="@+id/itemStakeTeam2"
            android:layout_width="@dimen/stake_width_team"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_sm"
            android:ellipsize="end"
            android:lines="1"
            app:layout_constraintStart_toEndOf="@id/itemStakeGoal2"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/team" />

        <LinearLayout
            android:id="@+id/itemStakeLayoutAddTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_sm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemStakeColon">

            <TextView
                android:id="@+id/itemStakeAddTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/stake_add_time" />

            <TextView
                android:id="@+id/itemStakePenalty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/stake_penalty" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>